[package]
name = "dev-daily-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
lambda_runtime = "1.0.1"
lambda_http = "1.0.1"
aws-config = "1"
aws-sdk-s3 = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing_subscriber = "0.3"